osprey_worker/src/osprey/engine/query_language/tests/test_validate_count_over/test_nested_count_over_rejected.txt
error: `CountOver` may not be nested
--> main.sml:1:28
     |
   1 | Query = CountOver(predicate=CountOver(predicate=Foo == 'x', window='1m') == 1, window='10m') >= 5
     |                             ^ the `predicate` argument of `CountOver(...)` cannot itself contain `CountOver`